# FreeTuber

./: CMakeLists.txt  README.md  build.sh
shaders/: frag.glsl  vert.glsl
src/: Camera.cpp  Camera.hpp  EmbeddedResources.hpp  HeadPose.cpp  HeadPose.hpp  Shader.cpp  Shader.hpp  VRMLoader.cpp  VRMLoader.hpp  main.cpp
